--- a/front/project-root/my-electron-app/index.html
+++ b/front/project-root/my-electron-app/index.html
@@ -50,7 +50,8 @@
           <h2 class="section-title">CODE</h2>
           <button class="rounded-button blue-button read-screen-button-top">READ SCREEN</button>
           <pre class="bg-gray-100 p-4 rounded" style="width: 80%; height: 60%; "><code>
-            <textarea type="text" id="code_data" style="width: 100%; height: 80%; "></textarea>
+            <h3 id="bonjour" style="margin: 0%;padding: 0%;">bilbique</h3>
+            <textarea type="text" id="code_data" style="width: 100%; height: 80%; margin: 0%;padding: 0%;"></textarea>
           </code></pre>
         </div>
       </div>
@@ -104,7 +105,6 @@
       </div>
     </main>
   </div>
-  <script src="js/script.js"></script>
 </body>
 </html>
 
