fix(RUN_CONFIGS)(FILE_ARCHITECTURE): Add file architecture when a project is opened with links to the files

--- a/front/project-root/my-electron-app/index.html
+++ b/front/project-root/my-electron-app/index.html
@@ -38,16 +38,7 @@
             <button class="rounded-button pink-button">IN USE: INDEX.HTML</button>
           </div>
           <div class="folder-container">
-            <div class="folder-left">
-              <p>&#8627; Folder: Foo</p>
-              <p class="ml-4">&#8627; Folder: Bar</p>
-              <p class="ml-8">&#8627; File: index.html <input type="checkbox" checked disabled></p>
-            </div>
-            <div class="folder-right">
-              <p>&#8627; Folder: Foo</p>
-              <p class="ml-4">&#8627; Folder: Bar</p>
-              <p class="ml-8">&#8627; File: index.js <input type="checkbox" checked disabled></p>
-            </div>
+            <ul id="fileList"></ul>
           </div>
         </div>
         <div id="terminal" class="grid-item terminal text-center">
