--- a/front/project-root/my-electron-app/index.html
+++ b/front/project-root/my-electron-app/index.html
@@ -99,7 +99,7 @@
           </div> -->
           <div class="flex justify-between mb-4">
             <button id="execute_file" class="rounded-button green-button">Exec current File</button>
-            <iframe id = "execute_result" class="w-full p-2 border"></iframe>
+            <textarea id = "execute_result" class="w-full p-2 border"></textarea>
           </div>
           <!-- <div class="variables">
             <p>foo: 7 <input type="text" class="border p-1 ml-2" value="7"><button
